SCISOFT-UI: more work on fixing multi-dimensional axis dataset handling  * add long name support to axis choice and HDF5 explorer  * change some method names in axis choice to make more sense (to me!)  * simplify axis selection class  * make axis slicer listen to other slice changes  * remove duplicate call in plot tab when repopulating combos  * allow concurrent changes to an inspector property when firing  * make axes selection external  * add per dataset values to multiple datasets selection  * extend SRS explorer to allow for datasets of ranks > 1  * fix(?) wrong assert in 1D plotting